<resources>
    <string name="app_name">EasyTrip</string>
    <string name="content_authority">io.github.giusan82.easytrip</string>
    <string name="action_settings">Settings</string>
    <string name="action_map">Map</string>
    <string name="action_search">Search</string>
    <string name="no_data_available">No data available, you need to get the current location. Click here to get it.</string>
    <string name="temperature_unit">°C</string>
    <string name="empty_message">Nothing has been found</string>

    <!-- contentDescriptions -->
    <string name="search_contentDescription">Search</string>
    <string name="map_contentDescription">Find nearby places</string>
    <string name="settings_contentDescription">Settings</string>
    <string name="destination_images_content_description">Representative image of %1$s</string>
    <string name="destination_intro_content_description">Intro of %1$s</string>
    <string name="current_location_map_content_description">Google Map with the nearby point of interest</string>
    <string name="destination_header_content_description">An illustration with common travel destination in europe</string>
    <string name="empty_view_image_content_description">Compass</string>
    <string name="splash_background_content_description">A dream travel</string>
    <string name="expand_content">Expand content</string>
    <string name="collapse_content">Collapse content</string>

    <string name="loading_title">Please Wait...</string>
    <string name="loading_message">Connecting to server....</string>
    <string name="connection_error">Connection Error</string>
    <string name="need_location_permission_message">You need to enable location permissions</string>
    <string name="need_gps_message">No GPS signal found</string>

    <!--Tabs-->
    <string name="recommended_tab_label">Recommended</string>
    <string name="favorites_tab_label">Favorites</string>

    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->
    <string name="pref_category_general">General</string>

    <string name="pref_count_label">Number per page</string>
    <string name="pref_count_key" translatable="false">count</string>
    <string name="pref_count_default" translatable="false">10</string>
    <string name="pref_orderBy_label">Order By</string>
    <string name="pref_orderBy_key" translatable="false">score</string>
    <string name="pref_orderBy_default" translatable="false">-score</string>
    <string name="orderBy_more_popular_label">More Popular</string>
    <string name="orderBy_less_popular_label">Less Popular</string>
    <string name="orderBy_more_popular_value" translatable="false">-score</string>
    <string name="orderBy_less_popular_value" translatable="false">score</string>

    <!--Citations-->
    <string name="citation_1">Fill your life with adventures , not things.\nHave stories to tell not stuff to show.</string>
    <string name="citation_2">Live your life by a compass, not a clock.</string>
    <string name="citation_3">The world is a book and those who do not travel read only one page.</string>
    <string name="citation_4">Remember that happiness is a way of travel – not a destination.</string>
    <string name="citation_5">Own only what you can always carry with you: known languages, known countries, known people. Let your memory be your travel bag.</string>
    <string name="citation_6">The gladdest moment in human life, me thinks, is a departure into unknown lands.</string>
    <string name="citation_7">Be fearless in the pursuit of what sets your soul on fire.</string>
    <string name="citation_8">Travel makes one modest. You see what a tiny place you occupy in the world.</string>
    <string name="citation_9">Traveling – it leaves you speechless, then turns you into a storyteller.</string>
    <string name="citation_10">Our battered suitcases were piled on the sidewalk again; we had longer ways to go. But no matter, the road is life.</string>

    <string name="citation_authors_1">- Unknown</string>
    <string name="citation_authors_2" translatable="false">- Stephen Covey</string>
    <string name="citation_authors_3" translatable="false">- Agustine of Hippo</string>
    <string name="citation_authors_4" translatable="false">- Roy M. Goodman</string>
    <string name="citation_authors_5" translatable="false">- Alexandr Solzhenitsyn</string>
    <string name="citation_authors_6" translatable="false">- Sir Richard Burton</string>
    <string name="citation_authors_7" translatable="false">- Jennifer Lee</string>
    <string name="citation_authors_8" translatable="false">- Gustav Flaubert</string>
    <string name="citation_authors_9" translatable="false">- Ibn Battuta</string>
    <string name="citation_authors_10" translatable="false">- Jack Kerouac</string>

    <!--Widget-->
    <string name="add_widget">Add widget</string>

</resources>
