<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory
        android:layout="@layout/preferences_category"
        android:title="@string/pref_category_general">
        <ListPreference
            android:defaultValue="@string/pref_count_default"
            android:entries="@array/pref_counts_array"
            android:entryValues="@array/pref_counts_array"
            android:key="@string/pref_count_key"
            android:title="@string/pref_count_label" />
        <ListPreference
            android:defaultValue="@string/pref_orderBy_default"
            android:entries="@array/pref_orderBy_array_label"
            android:entryValues="@array/pref_orderBy_array_value"
            android:key="@string/pref_orderBy_key"
            android:title="@string/pref_orderBy_label" />
    </PreferenceCategory>
</PreferenceScreen>