<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/search_view"
        android:icon="@drawable/ic_search_24dp"
        android:title="@string/action_search"
        android:contentDescription="@string/search_contentDescription"
        app:actionViewClass="android.support.v7.widget.SearchView"
        app:showAsAction="collapseActionView|always" />
    <item
        android:id="@+id/action_map"
        android:contentDescription="@string/map_contentDescription"
        app:showAsAction="always"
        android:title="@string/action_map"
        android:icon="@drawable/ic_map_24dp"/>
    <item
        android:id="@+id/action_settings"
        android:contentDescription="@string/settings_contentDescription"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
</menu>
